--- a/misc/meta.tex
+++ b/misc/meta.tex
@@ -1,3 +1,3 @@
-% \newcommand{\papertitle}{}
-% \newcommand{\paperauthors}{}
-% \newcommand{\badgecolor}{}
+\newcommand{\papertitle}{OS \LeC{} 04}
+\newcommand{\paperauthors}{isagila}
+\newcommand{\badgecolor}{blue}
