--- a/main.tex
+++ b/main.tex
@@ -16,5 +16,17 @@
   \input{01/02.tex}
   \input{01/03.tex}
   \input{01/04.tex}
+  \input{01/05.tex}
+  \input{01/06.tex}
+  \input{01/07.tex}
+  \input{01/08.tex}
+  \input{01/09.tex}
+  \input{01/10.tex}
+  \input{01/11.tex}
+  \input{01/12.tex}
+  \input{01/13.tex}
+  \input{01/14.tex}
+  \input{01/15.tex}
+  \input{01/16.tex}
 
 \end{document}
