--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -62,3 +62,8 @@
 \usetikzlibrary{external}
 \usetikzlibrary{patterns.meta}
 \usepgfplotslibrary{external}
+
+\usetikzlibrary{shapes.geometric}
+\usetikzlibrary{arrows.meta}
+\usetikzlibrary{bending}
+\usetikzlibrary{positioning}
