--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
   \input{01/03.tex}
   \input{01/04.tex}
   \input{01/05.tex}
-  % \input{01/06.tex}
+  \input{01/06.tex}
   % \input{01/07.tex}
   % \input{01/08.tex}
   % \input{01/09.tex}
