--- a/01/01.tex
+++ b/01/01.tex
@@ -1,5 +1,5 @@
 \subsection{%
-  Лекция \texttt{24.??.??}.%
+  Лекция \texttt{24.02.07}.%
 }
 
 \subheader{Эволюция понятия \quote{операционная система}}
@@ -82,11 +82,15 @@
 Последняя задача в рамках этапа программ---диспетчеров это появление
 однопрограммной пакетной обработки. Т.к. программы становились больше и иногда
 возникала потребность в том, чтобы переиспользовать некоторые специфичные части
-кода, то появилось разделение на пакеты. Теперь в память загружалась не просто
-программа, а некоторое количество пакетов: пока один пакет выполнялся, другой
-пакет (или несколько пакетов) подгружались в память. Появляется понятие очереди
-из пакетов, и возникает необходимость в управлении этой очередью: например,
-некоторые пакеты по тем или иным причинам должны получить приоритет.
+кода, то появилось разделение на пакеты. Теперь в память загружалась не вся
+программа (т.к. она не могла полностью разместиться в оперативной памяти), а
+лишь некоторое количество пакетов: пока один пакет выполнялся, другой пакет (или
+несколько пакетов) подгружались в память. Появляется понятие очереди из пакетов,
+и возникает необходимость в управлении этой очередью: например, некоторые пакеты
+по тем или иным причинам должны получить приоритет. Также нужно следить за тем,
+чтобы нужные пакеты всегда были подгружены и не происходило обращения к еще не
+загруженным частям кода. Эти, а также некоторые другие задачи возлагаются на
+программы---диспетчеры.
 
 Итого, задачи решаемые на данном этапе:
 
